Unify LoadAhem() and make it available for other tests

RenderingTest::LoadAhem() is useful for other tests when they rely on
specific metrics of the font. This patch makes it a static function so
that other tests can use it.

Currently, RangeTest copies the logic, and we found WebFrameTest needs
it too in issue 749836.

Bug: 749836
Change-Id: I3f3338cdfe62fa565a572fca60128544ea884b01