third_party/WebKit/Source/core/frame/FrameTestHelpers.cpp
@@ -35,6 +35,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "core/exported/WebRemoteFrameImpl.h"
 #include "core/frame/WebLocalFrameImpl.h"
+#include "core/layout/LayoutTestHelper.h"
 #include "platform/testing/URLTestHelpers.h"
 #include "platform/testing/UnitTestHelpers.h"
 #include "platform/wtf/Functional.h"
@@ -315,6 +316,13 @@ WebViewImpl* WebViewHelper::InitializeRemote(
   frame->GetFrame()->GetSecurityContext()->SetReplicatedOrigin(
       std::move(security_origin));
   return web_view_;
+}
+
+void WebViewHelper::LoadAhem() {
+  LocalFrame* local_frame =
+      ToLocalFrame(WebFrame::ToCoreFrame(*LocalMainFrame()));
+  DCHECK(local_frame);
+  RenderingTest::LoadAhem(*local_frame);
 }
 
 void WebViewHelper::Reset() {
